# roadmate

./: .env  .env.example  ARCHITECTURE.md  DATABASE_SCHEMA.md  Dockerfile  MODELS_DOCUMENTATION.md  POSTGRES_SETUP.md  README.md  TUNNEL_INSTRUCTIONS.md  alembic.ini  create_tunnel.py  docker-compose.yml  pyproject.toml  run_ngrok.py  run_ngrok_script.py  run_server.py  run_tunnel.py  run_with_cloudflared.py  run_with_tunnel.bat  test_db.py
.proxyai/checkpoints/2cd150cd-3d58-427b-a31b-f5d3282e26ef/: 4eca3aca-8e9a-4cf9-9ea3-73719778faf6  699213d7-81ac-46df-a2fc-546b38330b43
app/: main.py
app/api/: deps.py  websocket.py
app/api/v1/: api_router.py
app/core/: config.py  dependencies.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py
app/models/chat/: __init__.py  model.py
app/models/comments/: __init__.py  model.py
app/models/notifications/: __init__.py  model.py
app/models/requests/: __init__.py  model.py
app/models/reviews/: __init__.py  model.py
app/models/trips/: __init__.py  model.py
app/models/users/: __init__.py  model.py  settings.py
app/repositories/auth/: __init__.py
app/repositories/chat/: __init__.py  repository.py
app/repositories/comments/: __init__.py  repository.py
app/repositories/notifications/: repository.py
app/repositories/requests/: repository.py
app/repositories/reviews/: __init__.py  repository.py
app/schemas/: base.py  comments.py  requests.py  reviews.py
roadmate.egg-info/: requires.txt
tests/: test_chat.py  test_main.py  test_notifications.py  test_requests.py  test_reviews.py
(+63 files in other folders)
